--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,9 @@
-FROM pytorch/pytorch:latest
+FROM nvcr.io/nvidia/pytorch:19.04-py3
+
+RUN pip install boto3 sentencepiece
 
 RUN git clone https://github.com/NVIDIA/apex.git && cd apex && python setup.py install --cuda_ext --cpp_ext
 
-RUN pip install pytorch-pretrained-bert
+WORKDIR /src
 
-WORKDIR /workspace
+CMD ["/bin/bash"]
