--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ regex = "^2019.8.19"
 sentencepiece = "^0.1.83"
 sacremoses = "^0.0.35"
 torch = {version = "^1.2.0", allows-prereleases = true}
-lm = { git = "https://github.com/iambotHQ/transformer-lm.git", branch = "master" }
+# lm = { git = "https://github.com/iambotHQ/transformer-lm.git", branch = "master" }
 
 [tool.poetry.dev-dependencies]
 black = {version = "^19.3b0", allows-prereleases = true}
