add BertForNer, SentencePiece wrapper, fix eval scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ regex = "^2019.8.19"
 sentencepiece = "^0.1.83"
 sacremoses = "^0.0.35"
 torch = {version = "^1.2.0", allows-prereleases = true}
-# lm = { git = "https://github.com/iambotHQ/transformer-lm.git", branch = "master" }
+lm = { git = "https://github.com/iambotHQ/transformer-lm.git", branch = "master" }
+seqeval = "^0.0.12"
+tensorboardx = {version = "^1.9", allows-prereleases = true}
+fire = "^0.2.1"
+
 
 [tool.poetry.dev-dependencies]
 black = {version = "^19.3b0", allows-prereleases = true}
@@ -21,7 +25,7 @@ rope = {version = "^0.14.0", allows-prereleases = true}
 ipdb = "^0.12.2"
 
 [tool.black]
-line-length = 192
+line-length = 256
 target-version = ['py37']
 include = '\.pyi?$'
 exclude = "generated"
@@ -43,5 +47,5 @@ warn_redundant_casts = true
 warn_unused_ignores = true
 disallow_untyped_defs = false
 check_untyped_defs = true
-no_incremental = false
+no_incremental = true
 
