--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -547,6 +547,8 @@
         title: RegNet
       - local: model_doc/resnet
         title: ResNet
+      - local: model_doc/rt_detr
+        title: RT_DETR
       - local: model_doc/segformer
         title: SegFormer
       - local: model_doc/swiftformer
