--- a/docs/source/te/_toctree.yml
+++ b/docs/source/te/_toctree.yml
@@ -1,1 +1,8 @@
-
+- sections:
+  - local: index
+    title: 🤗 Transformers
+  - local: quicktour
+    title: త్వరిత పర్యటన
+  - local: installation
+    title: సంస్థాపన
+  title: ప్రారంభించడానికి
