--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -136,12 +136,12 @@
       title: Efficient training on CPU
     - local: perf_train_cpu_many
       title: Distributed CPU training
-#    - local: perf_train_tpu
-#      title: Training on TPUs
+    - local: perf_train_tpu
+      title: Training on TPUs
     - local: perf_train_tpu_tf
       title: Training on TPU with TensorFlow
-#    - local: perf_train_special
-#      title: Training on Specialized Hardware
+    - local: perf_train_special
+      title: Training on Specialized Hardware
     - local: perf_hardware
       title: Custom hardware for training
     - local: hpo_train
