--- a/.github/workflows/self-push-caller.yml
+++ b/.github/workflows/self-push-caller.yml
@@ -4,7 +4,7 @@ name: Self-hosted runner (push-caller)
 on:
   push:
     branches:
-      - main
+      - try_run_amd_push_ci_caller
     paths:
       - "src/**"
       - "tests/**"
