--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -400,6 +400,8 @@
         title: mLUKE
       - local: model_doc/mobilebert
         title: MobileBERT
+      - local: model_doc/molformer
+        title: MoLFormer
       - local: model_doc/mpnet
         title: MPNet
       - local: model_doc/mpt
