--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -600,6 +600,8 @@
         title: Audio Spectrogram Transformer
       - local: model_doc/bark
         title: Bark
+      - local: model_doc/ced
+        title: CED
       - local: model_doc/clap
         title: CLAP
       - local: model_doc/encodec
