fix problems mentioned in reviews

--- a/docs/source/zh/_toctree.yml
+++ b/docs/source/zh/_toctree.yml
@@ -14,7 +14,7 @@
   - local: pipeline_tutorial
     title: pipeline教程
   - local: transformers_agents
-    title: transformers_agents
+    title: transformers_agents教程
   title: 教程
 - sections:
   - local: fast_tokenizers
