--- a/docs/source/zh/_toctree.yml
+++ b/docs/source/zh/_toctree.yml
@@ -15,6 +15,8 @@
     title: pipeline教程
   - local: transformers_agents
     title: transformers_agents教程
+  - local: training
+    title: 模型训练教程
   title: 教程
 - sections:
   - local: fast_tokenizers
