run doctest 2023-09-26 [PR #26425] torch 2.1.0 + not run idefics.md

--- a/.github/workflows/doctests.yml
+++ b/.github/workflows/doctests.yml
@@ -3,7 +3,7 @@ name: Doctests
 on:
   push:
     branches:
-      - run_fc639143
+      - run_fc639143_003
   repository_dispatch:
   schedule:
     - cron: "17 2 * * *"
