--- a/docs/source/zh/_toctree.yml
+++ b/docs/source/zh/_toctree.yml
@@ -7,16 +7,18 @@
     title: 安装
   title: 开始使用
 - sections:
-  - local: accelerate
-    title: 加速分布式训练
-  - local: preprocessing
-    title: 预处理
   - local: pipeline_tutorial
     title: pipeline教程
-  - local: transformers_agents
-    title: transformers_agents教程
+  - local: preprocessing
+    title: 预处理
   - local: training
     title: 模型训练教程
+  - local: accelerate
+    title: 加速分布式训练
+  - local: transformers_agents
+    title: transformers_agents教程
+  title: 教程
+- sections:
   - local: fast_tokenizers
     title: 使用 🤗 Tokenizers 中的分词器
   - local: multilingual
@@ -25,4 +27,4 @@
     title: 使用特定于模型的 API
   - local: custom_models
     title: 共享自定义模型
-  title: 教程
+  title: 开发者指南
