--- a/docs/source/zh/_toctree.yml
+++ b/docs/source/zh/_toctree.yml
@@ -8,15 +8,15 @@
   title: 开始使用
 - sections:
   - local: pipeline_tutorial
-    title: pipeline教程
+    title: 使用pipelines进行推理
   - local: preprocessing
-    title: 预处理
+    title: 预处理数据
   - local: training
-    title: 模型训练教程
+    title: 微调预训练模型
   - local: accelerate
-    title: 加速分布式训练
+    title: 使用🤗Accelerate进行分布式训练
   - local: transformers_agents
-    title: transformers_agents教程
+    title: agents教程
   title: 教程
 - sections:
   - local: fast_tokenizers
