--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -326,6 +326,8 @@
         title: ESM
       - local: model_doc/falcon
         title: Falcon
+      - local: model_doc/fast
+        title: Fast
       - local: model_doc/flan-t5
         title: FLAN-T5
       - local: model_doc/flan-ul2
