--- a/docs/source/zh/_toctree.yml
+++ b/docs/source/zh/_toctree.yml
@@ -7,16 +7,16 @@
     title: 安装
   title: 开始使用
 - sections:
-  - local: accelerate
-    title: 加速分布式训练
-  - local: preprocessing
-    title: 预处理
   - local: pipeline_tutorial
-    title: pipeline教程
+    title: 使用pipelines进行推理
+  - local: preprocessing
+    title: 预处理数据
+  - local: training
+    title: 微调预训练模型
+  - local: accelerate
+    title: 使用🤗Accelerate进行分布式训练
   - local: transformers_agents
-    title: transformers_agents教程
-  - local: task_summary
-    title: 任务摘要
+    title: agents教程
   title: 教程
 - sections:
   - local: fast_tokenizers
@@ -27,4 +27,10 @@
     title: 使用特定于模型的 API
   - local: custom_models
     title: 共享自定义模型
+  - local: serialization
+    title: 导出为 ONNX
   title: 开发者指南
+- sections:
+  - local: 任务综述
+    title: 🤗Transformers能做什么
+  title: 概念指南
