--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -524,7 +524,7 @@
       - local: model_doc/efficientnet
         title: EfficientNet
       - local: model_doc/fast
-        title: Fast
+        title: FAST
       - local: model_doc/focalnet
         title: FocalNet
       - local: model_doc/glpn
