--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -749,6 +749,10 @@
         title: Informer
       - local: model_doc/time_series_transformer
         title: Time Series Transformer
+      - local: model_doc/patchtst
+        title: PatchTST
+      - local: model_doc/patchtsmixer
+        title: PatchTSMixer
       title: Time series models
     - isExpanded: false
       sections:
