--- a/docs/source/zh/_toctree.yml
+++ b/docs/source/zh/_toctree.yml
@@ -60,3 +60,9 @@
   - local: tokenizer_summary
     title: 分词器的摘要
   title: 概念指南
+- sections:
+  - sections:
+    - local: main_classes/deepspeed
+      title: DeepSpeed集成
+    title: 主要类
+  title: API
