--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -38,4 +38,4 @@ jobs:
           build-args: |
             REF=main
           push: true
-          tags: huggingface/transformers-pytorch-amd-gpu${{ inputs.image_postfix }}-test
+          tags: huggingface/transformers-pytorch-amd-gpu${{ inputs.image_postfix }}
