--- a/docs/source/ja/_toctree.yml
+++ b/docs/source/ja/_toctree.yml
@@ -183,6 +183,8 @@
   - sections:
     - isExpanded: false
       sections:
+      - local: model_doc/albert
+        title: ALBERT
       - local: model_doc/bart
         title: BART
       - local: model_doc/barthez
@@ -205,13 +207,22 @@
         title: BioGpt
       - local: model_doc/blenderbot
         title: Blenderbot
-      - local: model_doc/albert
-        title: ALBERT
+      - local: model_doc/blenderbot-small
+        title: Blenderbot Small
       title: 文章モデル
+    - isExpanded: false
+      sections:
+      - local: model_doc/beit
+        title: BEiT
+      - local: model_doc/bit
+        title: BiT
+      title: ビジョンモデル
     - isExpanded: false
       sections:
       - local: model_doc/audio-spectrogram-transformer
         title: Audio Spectrogram Transformer
+      - local: model_doc/bark
+        title: Bark
       title: 音声モデル
     - isExpanded: false
       sections:
