--- a/docs/source/ja/_toctree.yml
+++ b/docs/source/ja/_toctree.yml
@@ -99,6 +99,7 @@
     - local: tasks/prompting
       title: LLM プロンプト ガイド
     title: プロンプト
+  title: タスクガイド
 - sections:
   - local: fast_tokenizers
     title: 🤗 トークナイザーの高速トークナイザーを使用する
