--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -826,6 +826,10 @@
         title: CLIPSeg
       - local: model_doc/clvp
         title: CLVP
+      - local: model_doc/colpali
+        title: ColPali
+      - local: model_doc/colpali
+        title: ColPali
       - local: model_doc/data2vec
         title: Data2Vec
       - local: model_doc/deplot
