--- a/.github/workflows/self-scheduled-caller.yml
+++ b/.github/workflows/self-scheduled-caller.yml
@@ -7,7 +7,7 @@ on:
     - cron: "17 2 * * *"
   push:
     branches:
-      - run_daily_ci_11_20
+      - get_bad_commits_for_daily_ci_11_20
 
 jobs:
   model-ci:
