--- a/.github/workflows/check_failed_model_tests.yml
+++ b/.github/workflows/check_failed_model_tests.yml
@@ -68,6 +68,7 @@ jobs:
       - name: Check failed tests
         working-directory: /transformers
         run: |
+          apt-get install curl
           curl -o new_model_failures.json https://huggingface.co/datasets/hf-internal-testing/transformers_daily_ci/raw/main/2024-11-20/ci_results_run_models_gpu/new_model_failures.json
           python3 utils/check_bad_commit.py --start_commit ${{ inputs.start_sha }} --end_commit ${{ env.END_SHA }} --file new_model_failures.json --output_file new_model_failures_with_bad_commit.json
 
