--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -684,7 +684,7 @@
       - local: model_doc/rt_detr
         title: RT-DETR
       - local: model_doc/rt_detr_v2
-        title: RTDetrV2
+        title: RtDetrV2
       - local: model_doc/segformer
         title: SegFormer
       - local: model_doc/seggpt
