--- a/docker/transformers-quantization-latest-gpu/Dockerfile
+++ b/docker/transformers-quantization-latest-gpu/Dockerfile
@@ -37,6 +37,7 @@ RUN python3 -m pip install --no-cache-dir einops
 RUN python3 -m pip install --no-cache-dir bitsandbytes
 
 # Add auto-gptq for gtpq quantization testing, installed from source
+RUN pip install gekko
 RUN git clone https://github.com/PanQiWei/AutoGPTQ.git && cd AutoGPTQ && pip install -vvv --no-build-isolation -e .
 
 # Add optimum for gptq quantization testing
