--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -362,6 +362,8 @@
         title: CodeLlama
       - local: model_doc/cohere
         title: Cohere
+      - local: model_doc/cohere2
+        title: Cohere2
       - local: model_doc/convbert
         title: ConvBERT
       - local: model_doc/cpm
